Fixed vertical alignment of globe icon on bridge page + removed space between icon and timezone text.

--- a/css/guest-app.less
+++ b/css/guest-app.less
@@ -357,6 +357,19 @@ hr {
   margin-left: 20px;
 }
 
+.timezone-icon-sm {
+  width: 16px;
+  height: 16px;
+  vertical-align: middle;
+  margin-bottom: 0.20em;
+}
+
+.timezone-text {
+  display: inline-block;
+  margin-left: 8px;
+  font-size: 14px;
+}
+
 
 /*** Confirmed ***/
 
